Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h3>
 <a name="welcome-to-my-website-on-github" class="anchor" href="#welcome-to-my-website-on-github"><span class="octicon octicon-link"></span></a>WELCOME to MY Website on GITHUB</h3>
 
-<p><b><i>THIS WILL ACT AS GITHUB Help</i></b></p>
+<p><b><i>THIS WILL ACT AS GITHUB Help</i></b><br><a href="https://help.github.com/categories/20/articles">For getting connected with this page click here</a> </p>
       </section>
 
       <footer>
